# 124M_GPT2

./: RoPE_experimental.ipynb  attention_residuals_experimental.ipynb  dataset_setup.txt  experimental.ipynb  kv_cache_sdpa.ipynb  main.py  model.py  pyproject.toml  transformer_attention_residual.py
architecture_experimental_notebooks/: RoPE_experimental.ipynb  attention_residuals_experimental.ipynb  experimental.ipynb
experimental_arch/: fast_training_model.py  transformer_attention_residual.py  video_model.py
model/: dataset_tokenizer.py  model.py
training_logs/: attn_tr.txt  normal_tr.txt
vocab/: char_vocab.py
